# C-Primer-Plus-Exercises

./: .gitignore  CMakeLists.txt  README.md
ch02/: exercise1.c  exercise2-3.c  exercise2-4.c  exercise2-5.c  exercise2-7.c  exercise2-8.c  exercise6.c
ch12/: exercise12-2-b.c  exercise12-2.c  exercise12-3-b.c  exercise12-3.c  exercise12-7-b.c  exercise12-7.c
ch16/: exercise16-2.c  exercise16-3.c
