cmake_minimum_required(VERSION 3.15)
project(C_Primer_Plus_Exercises)

set(CMAKE_CXX_STANDARD 14)

include_directories(ch12)
include_directories(ch16)
include_directories(ch17)




add_executable(exercise2-1 ch02/exercise2-1.c)
add_executable(exercise2-3 ch02/exercise2-3.c)
add_executable(exercise2-4 ch02/exercise2-4.c)
add_executable(exercise2-5 ch02/exercise2-5.c)
add_executable(exercise2-6 ch02/exercise2-6.c)
add_executable(exercise2-7 ch02/exercise2-7.c)
add_executable(exercise2-8 ch02/exercise2-8.c)
add_executable(exercise3-1 ch03/exercise3-1.c)
add_executable(exercise3-2 ch03/exercise3-2.c)
add_executable(exercise3-3 ch03/exercise3-3.c)
add_executable(exercise3-4 ch03/exercise3-4.c)
add_executable(exercise3-5 ch03/exercise3-5.c)
add_executable(exercise3-6 ch03/exercise3-6.c)
add_executable(exercise3-7 ch03/exercise3-7.c)
add_executable(exercise3-8 ch03/exercise3-8.c)
add_executable(exercise4-1 ch04/exercise4-1.c)
add_executable(exercise4-2 ch04/exercise4-2.c)
add_executable(exercise4-3 ch04/exercise4-3.c)
add_executable(exercise4-4 ch04/exercise4-4.c)
add_executable(exercise4-5 ch04/exercise4-5.c)
add_executable(exercise4-6 ch04/exercise4-6.c)
add_executable(exercise4-7 ch04/exercise4-7.c)
add_executable(exercise4-8 ch04/exercise4-8.c)
add_executable(exercise5-1 ch05/exercise5-1.c)
add_executable(exercise5-2 ch05/exercise5-2.c)
add_executable(exercise5-3 ch05/exercise5-3.c)
add_executable(exercise5-4 ch05/exercise5-4.c)
add_executable(exercise5-5 ch05/exercise5-5.c)
add_executable(exercise5-6 ch05/exercise5-6.c)
add_executable(exercise5-7 ch05/exercise5-7.c)
add_executable(exercise5-8 ch05/exercise5-8.c)
add_executable(exercise5-9 ch05/exercise5-9.c)
add_executable(exercise6-1 ch06/exercise6-1.c)
add_executable(exercise6-2 ch06/exercise6-2.c)
add_executable(exercise6-3 ch06/exercise6-3.c)
add_executable(exercise6-4 ch06/exercise6-4.c)
add_executable(exercise6-5 ch06/exercise6-5.c)
add_executable(exercise6-6 ch06/exercise6-6.c)
add_executable(exercise6-7 ch06/exercise6-7.c)
add_executable(exercise6-8 ch06/exercise6-8.c)
add_executable(exercise6-9 ch06/exercise6-9.c)
add_executable(exercise6-10 ch06/exercise6-10.c)
add_executable(exercise6-11 ch06/exercise6-11.c)
add_executable(exercise6-12 ch06/exercise6-12.c)
add_executable(exercise6-13 ch06/exercise6-13.c)
add_executable(exercise6-14 ch06/exercise6-14.c)
add_executable(exercise6-15 ch06/exercise6-15.c)
add_executable(exercise6-16 ch06/exercise6-16.c)
add_executable(exercise6-17 ch06/exercise6-17.c)
add_executable(exercise6-18 ch06/exercise6-18.c)
add_executable(exercise7-1 ch07/exercise7-1.c)
add_executable(exercise7-2 ch07/exercise7-2.c)
add_executable(exercise7-3 ch07/exercise7-3.c)
add_executable(exercise7-4 ch07/exercise7-4.c)
add_executable(exercise7-5 ch07/exercise7-5.c)
add_executable(exercise7-6 ch07/exercise7-6.c)
add_executable(exercise7-7 ch07/exercise7-7.c)
add_executable(exercise7-8 ch07/exercise7-8.c)
add_executable(exercise7-9 ch07/exercise7-9.c)
add_executable(exercise7-10 ch07/exercise7-10.c)
add_executable(exercise7-11 ch07/exercise7-11.c)
add_executable(exercise8-1 ch08/exercise8-1.c)
add_executable(exercise8-2 ch08/exercise8-2.c)
add_executable(exercise8-3 ch08/exercise8-3.c)
add_executable(exercise8-4 ch08/exercise8-4.c)
add_executable(exercise8-5 ch08/exercise8-5.c)
add_executable(exercise8-6 ch08/exercise8-6.c)
add_executable(exercise8-7 ch08/exercise8-7.c)
add_executable(exercise8-8 ch08/exercise8-8.c)
add_executable(exercise9-1 ch09/exercise9-1.c)
add_executable(exercise9-2 ch09/exercise9-2.c)
add_executable(exercise9-3 ch09/exercise9-3.c)
add_executable(exercise9-4 ch09/exercise9-4.c)
add_executable(exercise9-5 ch09/exercise9-5.c)
add_executable(exercise9-6 ch09/exercise9-6.c)
add_executable(exercise9-7 ch09/exercise9-7.c)
add_executable(exercise9-8 ch09/exercise9-8.c)
add_executable(exercise9-9 ch09/exercise9-9.c)
add_executable(exercise9-10 ch09/exercise9-10.c)
add_executable(exercise9-11 ch09/exercise9-11.c)
add_executable(exercise10-1 ch10/exercise10-1.c)
add_executable(exercise10-2 ch10/exercise10-2.c)
add_executable(exercise10-3 ch10/exercise10-3.c)
add_executable(exercise10-4 ch10/exercise10-4.c)
add_executable(exercise10-5 ch10/exercise10-5.c)
add_executable(exercise10-6 ch10/exercise10-6.c)
add_executable(exercise10-7 ch10/exercise10-7.c)
add_executable(exercise10-8 ch10/exercise10-8.c)
add_executable(exercise10-9 ch10/exercise10-9.c)
add_executable(exercise10-10 ch10/exercise10-10.c)
add_executable(exercise10-11 ch10/exercise10-11.c)
add_executable(exercise10-12 ch10/exercise10-12.c)
add_executable(exercise10-13 ch10/exercise10-13.c)
add_executable(exercise10-14 ch10/exercise10-14.c)
add_executable(exercise11-1 ch11/exercise11-1.c)
add_executable(exercise11-2 ch11/exercise11-2.c)
add_executable(exercise11-3 ch11/exercise11-3.c)
add_executable(exercise11-4 ch11/exercise11-4.c)
add_executable(exercise11-5 ch11/exercise11-5.c)
add_executable(exercise11-6 ch11/exercise11-6.c)
add_executable(exercise11-7 ch11/exercise11-7.c)
add_executable(exercise11-8 ch11/exercise11-8.c)
add_executable(exercise11-9 ch11/exercise11-9.c)
add_executable(exercise11-11 ch11/exercise11-11.c)
add_executable(exercise11-12 ch11/exercise11-12.c)
add_executable(exercise11-13 ch11/exercise11-13.c)
add_executable(exercise11-14 ch11/exercise11-14.c)
add_executable(exercise11-16 ch11/exercise11-16.c)
add_executable(exercise11-15 ch11/exercise11-15.c)
add_executable(exercise12-1 ch12/exercise12-1.c)
add_executable(exercise12-2 ch12/exercise12-2.c)
add_executable(exercise12-2-b ch12/exercise12-2-b.c)
add_executable(exercise12-3 ch12/exercise12-3.c)
add_executable(exercise12-3-b ch12/exercise12-3-b.c)
add_executable(exercise12-4 ch12/exercise12-4.c)
add_executable(exercise12-5 ch12/exercise12-5.c)
add_executable(exercise12-6 ch12/exercise12-6.c)
add_executable(exercise12-7 ch12/exercise12-7.c)
add_executable(exercise12-7-b ch12/exercise12-7-b.c)
add_executable(exercise12-8 ch12/exercise12-8.c)
add_executable(exercise12-9 ch12/exercise12-9.c)
add_executable(exercise13-1 ch13/exercise13-1.c)
add_executable(exercise13-2 ch13/exercise13-2.c)